--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-svg": "^15.3.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
